--- a/client/stylesheets/style.scss
+++ b/client/stylesheets/style.scss
@@ -1,6 +1,7 @@
 body {
   font-family: "Open Sans", sans-serif;
-  color: white; }
+  color: white;
+  min-height: 100vh; }
 
 p {
   font-weight: lighter;
@@ -27,13 +28,21 @@ p {
   border: 1px solid #f58614; }
 
 .label {
-  padding: 10px;
+  padding: 8px;
   font-size: 1em;
+  display: inline-block;
+  margin-right: 5px;
+  margin-bottom: 5px;
   text-transform: uppercase;
   letter-spacing: 1px; }
 
 .label-primary {
   background-color: red; }
+
+.label-default {
+  background-color: white;
+  color: #3f120d;
+}
 
 .label-foodpairing {
   background-color: #f6932c; }
@@ -166,7 +175,23 @@ body {
   margin-bottom: 30px;
   position: relative; }
   .waiting-room-players .main-player {
-    text-align: center; }
+    text-align: center;
+    border: 3px solid #3f120d;
+    height: 90px;
+    width: 90px;
+    border-radius: 50%;
+    margin: 0 auto;
+    padding-top: 10px;
+    line-height: 1.2; }
+    .waiting-room-players .main-player .timer {
+      font-size: 2.5em;
+      font-weight: normal;
+      color: #3f120d; }
+    .waiting-room-players .main-player .timer-seconds {
+      text-transform: uppercase;
+      letter-spacing: 2px;
+      font-size: 1em;
+      color: #3f120d; }
   .waiting-room-players .main-player img {
     max-width: 90px;
     height: 90px;
@@ -196,25 +221,25 @@ body {
 
 .waiting-room-players .player-one {
   left: 5%;
-  bottom: 40px; }
+  bottom: 30px; }
 
 .waiting-room-players .player-two {
   left: 15%;
-  bottom: 115px; }
+  bottom: 100px; }
 
 .waiting-room-players .player-three {
   left: 50%;
   transform: translateX(-50%);
   -webkit-transform: translateX(-50%);
-  bottom: 140px; }
+  bottom: 130px; }
 
 .waiting-room-players .player-four {
   right: 15%;
-  bottom: 115px; }
+  bottom: 100px; }
 
 .waiting-room-players .player-five {
   right: 5%;
-  bottom: 40px; }
+  bottom: 30px; }
 
 .howto {
   background-color: #f6932c; }
@@ -277,14 +302,15 @@ body {
 .game .timer {
   background-color: red;
   position: absolute;
-  bottom: 120px;
+  top: 120px;
   right: 0;
   padding: 10px;
   border-radius: 4px 0 0 4px; }
 
 .judger {
   background-color: #823104;
-  color: white; }
+  color: white;
+  min-height: 100vh; }
   .judger .hero .hero-text h1 {
     color: white; }
   .judger .the-word h4 {
